Change margin of image, change position of sendMessage to absolute to prevent it overlapping

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -32,7 +32,6 @@
 
 .chatWindow {
   height: 700px;
-  /*overflow: scroll;*/
   border: 1px solid black;
 }
 
@@ -44,11 +43,9 @@
 
 .sendMessage {
   margin-bottom: 20px;
-  position: fixed; 
+  position: absolute; 
   bottom: 0;  
   border: 1px solid black;
-  /*width: 20%;*/
-/*  margin-left: 30px;*/
   width: 748px;
 }
 
@@ -87,7 +84,7 @@
 
 img {
   margin-top: 30px;
-  /*margin-right: 1px;*/
+  margin-left: 24px;
 }
 
 
